--- a/src/gadgets/moeskin-styles/Gadget-moeskin-styles.css
+++ b/src/gadgets/moeskin-styles/Gadget-moeskin-styles.css
@@ -3,7 +3,7 @@
 /* 全局背景图片 */
 body.skin-moeskin #moe-global-background {
     /* --theme-background-color: rgb(185 214 244); */
-    --background-url: url("https://storage.moegirl.org.cn/console-plus/uploads/2024/10/18/9a7cea890f29cde76125106015b8a50a.jpeg");
+    --background-url: url("https://storage.moegirl.org.cn/console-plus/uploads/2025/08/05/0232251f91d325dd1eb60134c28ba999.png");
 }
 
 /* 修复全局顶部活动展示区的图片缝隙 */
