fix(Gadget/ShowAvatar): 元素id变更

--- a/src/gadgets/ShowAvatar/Gadget-ShowAvatar.css
+++ b/src/gadgets/ShowAvatar/Gadget-ShowAvatar.css
@@ -11,6 +11,7 @@
 #pt-avatar {
     margin-top: 0.25em !important;
     margin-bottom: 0 !important;
+    margin-right: 0.2em !important;
 }
 
 #pt-avatar img {
