feat: rename `名字空间` to `命名空间`

--- a/src/gadgets/vector-styles/Gadget-vector-styles.css
+++ b/src/gadgets/vector-styles/Gadget-vector-styles.css
@@ -171,7 +171,7 @@ h2 {
     border-bottom: 1px solid #0074F9;
 }
 
-/* 名字空间改变背景色 */
+/* 命名空间改变背景色 */
 .ns-0 div#content,
 .ns-0 div#p-cactions li a:hover,
 .ns-0 div#p-cactions li.selected a {
