feat: 隐藏用户创建日志选项 (#717)

--- a/src/gadgets/site-styles/Gadget-site-styles.css
+++ b/src/gadgets/site-styles/Gadget-site-styles.css
@@ -1446,3 +1446,8 @@ body.overlay-scrollbars #bodyContent {
     background-color: var(--theme-background-color);
     color: var(--theme-text-color);
 }
+
+/* 隐藏不存在的用户创建日志 */
+body.mw-special-Log .mw-htmlform-flatlist > .oo-ui-fieldLayout:nth-child(4) {
+    display: none;
+}
