feat: 编辑栏竖线丢失

--- a/src/gadgets/site-styles/Gadget-site-styles.css
+++ b/src/gadgets/site-styles/Gadget-site-styles.css
@@ -1452,3 +1452,7 @@ body.overlay-scrollbars #bodyContent {
 body.mw-special-Log .mw-htmlform-flatlist > .oo-ui-fieldLayout:nth-child(4) {
     display: none;
 }
+
+.mw-content-container .mw-editsection .mw-editsection-divider {
+    display: revert;
+}
