chore: for moeskin

--- a/src/gadgets/site-styles/Gadget-site-styles.css
+++ b/src/gadgets/site-styles/Gadget-site-styles.css
@@ -1453,6 +1453,6 @@ body.mw-special-Log .mw-htmlform-flatlist > .oo-ui-fieldLayout:nth-child(4) {
     display: none;
 }
 
-.mw-content-container .mw-editsection .mw-editsection-divider {
+.mw-body-content .mw-editsection .mw-editsection-divider {
     display: revert;
 }
