--- a/src/global/commons/Common.css
+++ b/src/global/commons/Common.css
@@ -44,6 +44,6 @@ body:not(.ns-0) #upload-div {
     overflow-wrap: break-word;
 }
 
-.mw-content-container .mw-editsection .mw-editsection-divider {
+.mw-body-content .mw-editsection .mw-editsection-divider {
     display: revert;
 }
