chore: update file path

--- a/src/gadgets/SideBarPic/Gadget-SideBarPic.css
+++ b/src/gadgets/SideBarPic/Gadget-SideBarPic.css
@@ -46,7 +46,7 @@ body.sideBarPic-executed.show-logo:not(.DeceasedPerson) #mw-panel #p-logo {
 }
 
 body.sideBarPic-executed.show-logo:not(.DeceasedPerson) #mw-panel #p-logo .mw-wiki-logo {
-    background-image: url("https://img.moegirl.org.cn/logo/zhMoegirl15.2.png");
+    background-image: url("https://storage.moegirl.org.cn/moegirl/logo/zhMoegirl15.2.png");
     height: 160px;
 }
 
