--- a/src/gadgets/SideBarPic/Gadget-SideBarPic.css
+++ b/src/gadgets/SideBarPic/Gadget-SideBarPic.css
@@ -57,3 +57,17 @@ body.sideBarPic:not(.DeceasedPerson) #footer {
 body.sideBarPic:not(.DeceasedPerson) #footer #footer-moegirl .copyright {
     color: #2f2f2f;
 }
+
+/* vector-2022 背景图片 */
+body.sideBarPic.skin-vector-2022.mediawiki .mw-page-container {
+    background-color: rgb(255 255 255 / 90%);
+}
+
+body.sideBarPic .vector-pinned-container {
+    background-color: transparent;
+}
+
+
+body.sideBarPic .vector-sticky-pinned-container::after {
+    display: none;
+}
