背景图片支持vector-2022 (#789)
* feat(SideBarPic): 背景图片支持vector-2022

* feat(SideBarPic): 旧footer样式

--- a/src/gadgets/SideBarPic/Gadget-SideBarPic.css
+++ b/src/gadgets/SideBarPic/Gadget-SideBarPic.css
@@ -50,10 +50,20 @@ body.sideBarPic-executed.show-logo:not(.DeceasedPerson) #mw-panel #p-logo .mw-wi
     height: 160px;
 }
 
-body.sideBarPic:not(.DeceasedPerson) #footer {
-    background-color: rgb(255 255 255 / 70%);
-}
-
 body.sideBarPic:not(.DeceasedPerson) #footer #footer-moegirl .copyright {
     color: #2f2f2f;
+}
+
+/* vector-2022 背景图片 */
+body.sideBarPic.skin-vector-2022.mediawiki .mw-page-container {
+    background-color: rgb(255 255 255 / 90%);
+}
+
+body.sideBarPic .vector-pinned-container {
+    background-color: transparent;
+}
+
+
+body.sideBarPic .vector-sticky-pinned-container::after {
+    display: none;
 }
