feat(Gadget/SideBarPic): 统一透明背景

--- a/src/gadgets/SideBarPic/Gadget-SideBarPic.css
+++ b/src/gadgets/SideBarPic/Gadget-SideBarPic.css
@@ -67,3 +67,11 @@ body.sideBarPic .vector-pinned-container {
 body.sideBarPic .vector-sticky-pinned-container::after {
     display: none;
 }
+
+.vector-header-container .mw-header {
+    background-color: rgb(255 255 255 / 90%);
+}
+
+.vector-dropdown .vector-dropdown-content {
+    background-color: rgb(255 255 255 / 90%);
+}
