--- a/src/gadgets/SideBarPic/Gadget-SideBarPic.css
+++ b/src/gadgets/SideBarPic/Gadget-SideBarPic.css
@@ -68,10 +68,7 @@ body.sideBarPic .vector-sticky-pinned-container::after {
     display: none;
 }
 
-body.sideBarPic .vector-header-container .mw-header {
-    background-color: rgb(255 255 255 / 90%);
-}
-
+body.sideBarPic .vector-header-container .mw-header,
 body.sideBarPic .vector-dropdown .vector-dropdown-content {
     background-color: rgb(255 255 255 / 90%);
 }
