feat: 增加登录用户可见功能以替代widget

--- a/src/gadgets/site-styles/Gadget-site-styles.css
+++ b/src/gadgets/site-styles/Gadget-site-styles.css
@@ -433,6 +433,11 @@ table.wikitable-green {
     background: #f3f3f3;
 }
 
+/* 隐藏只供登录用户查看的内容 */
+.user-show {
+    display: none !important;
+}
+
 /* 隐藏只供维护人员查看的内容 */
 .patroller-show,
 .checkuser-show,
